--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,12 +1,9 @@
-.card {
-  max-width: 413px;
-}
-
 .card__image {
   height: 413px;
-  width: 413px;
+  width: 100%;
   object-fit: cover;
   display: block;
+  border-radius: 15px;
 }
 
 .card__content {
@@ -16,7 +13,13 @@
 }
 
 .card__title {
-  font-family: ;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .card__like-btn {
@@ -26,4 +29,18 @@
   border: none;
   opacity: 40%;
   background-color: transparent;
+}
+
+@media screen and (max-width: 627px) {
+  .card__image {
+    height: 288px;
+  }
+  .card__title {
+    font-size: 16px;
+  }
+  .card__like-btn {
+    background-image: url(../images/heart.svg);
+    width: 20px;
+    height: 18px;
+  }
 }
