--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,32 +1,119 @@
 .profile {
   display: flex;
-  max-width: 1280;
-  margin: 0 auto;
-  padding: 34px 0 20px;
+  justify-content: center;
+  /* max-width: 1280px; */
+  /* margin: 34px auto 20px auto; */
+  margin-top: 34px;
+  padding: 0 0;
+  margin-bottom: 20px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
 .profile__avatar {
   margin-right: 20px;
+  height: 190px;
+  width: 190px;
+  border-radius: 15px;
+  margin: 0 0;
 }
 
 .profile__column {
   display: flex;
   flex-direction: column;
-}
-
-.profile__edit-btn {
-  margin-top: auto;
+  gap: 20px;
+  width: 420px;
+  margin: 0 0 0 20px;
+  padding: 0;
 }
 
 .profile__name {
   margin: 0 0 12px;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 1;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__description {
   margin: 0;
+  color: #212121;
+  opacity: 70%;
+  font-size: 16px;
+  line-height: 1;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
+}
+
+.profile__edit-btn {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-top: auto;
+  color: #212121;
+  font-size: 16px;
+  text-align: left;
+  opacity: 70%;
+  background-color: #fcf5e5;
+  border: none;
 }
 
 .profile__add-btn {
-  margin-left: auto;
+  display: flex;
+  align-items: center;
+  margin: 138px 0 20px auto;
+  gap: 8px;
+  color: white;
+  background-color: #212121;
+  padding: 18px 32px;
+  text-align: center;
+  border-radius: 15px;
+}
+
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    max-width: 288px;
+    align-items: center;
+    text-align: center;
+    padding-top: 20px;
+  }
+
+  .profile__avatar {
+    margin-right: 0;
+    width: 80px;
+    height: 80px;
+    margin: 0 0 12px;
+  }
+
+  .profile__name {
+    font-size: 20px;
+    margin-bottom: 6px;
+  }
+
+  .profile__description {
+    font-size: 16px;
+    margin-bottom: 32px;
+  }
+
+  .profile__edit-btn {
+    margin-top: 0;
+  }
+
+  .profile__column {
+    margin: 0 0 20px;
+    align-items: center;
+    gap: 0;
+  }
+
+  .profile__add-btn {
+    margin: 0 0 20px;
+    justify-content: center;
+    width: 100%;
+    top: 18px;
+  }
 }
