--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,9 +1,7 @@
 .profile {
   display: flex;
   justify-content: center;
-  margin-top: 34px;
-  padding: 0 0;
-  margin-bottom: 20px;
+  padding: 34px 0 20px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
@@ -11,15 +9,15 @@
   margin-right: 20px;
   height: 190px;
   width: 190px;
-  border-radius: 15px;
+  border-radius: 8px;
   margin: 0 0;
+  object-fit: cover;
 }
 
 .profile__column {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  width: 420px;
+  max-width: 420px;
   margin: 0 0 0 20px;
   padding: 0;
 }
@@ -40,6 +38,7 @@
   color: #212121;
   opacity: 70%;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1;
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
@@ -54,22 +53,37 @@
   margin-top: auto;
   color: #212121;
   font-size: 16px;
+  font-weight: 500;
   text-align: left;
   opacity: 70%;
   background-color: #fcf5e5;
   border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.profile__edit-btn:hover {
+  color: #212121;
+  opacity: 100%;
 }
 
 .profile__add-btn {
   display: flex;
   align-items: center;
-  margin: 138px 0 20px auto;
+  margin: auto 0 0 auto;
+  padding: 18px 32px;
   gap: 8px;
-  color: white;
+  color: #fcf5e5;
   background-color: #212121;
   padding: 18px 32px;
   text-align: center;
-  border-radius: 15px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.profile__add-btn:hover {
+  background-color: #212121;
+  opacity: 80%;
 }
 
 @media screen and (max-width: 627px) {
@@ -110,9 +124,8 @@
   }
 
   .profile__add-btn {
-    margin: 0 0 20px;
+    margin: 0 0;
     justify-content: center;
     width: 100%;
-    top: 18px;
   }
 }
