--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -30,6 +30,8 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  overflow: hidden;
+  display: -webkit-box;
   max-width: 420px;
 }
 
@@ -43,6 +45,8 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  overflow: hidden;
+  display: -webkit-box;
   max-width: 420px;
 }
 
@@ -79,6 +83,7 @@
   text-align: center;
   border-radius: 8px;
   cursor: pointer;
+  border: none;
 }
 
 .profile__add-btn:hover {
