--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,6 +1,3 @@
-/* todo add correct font styles for everything */
-/* add close icon and figure the spacing out*/
-
 .modal {
   visibility: hidden;
   background-color: #00000080;
@@ -14,11 +11,16 @@
   align-items: center;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   padding: 10px;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
 .modal_is-opened {
   visibility: visible;
   font-family: Poppins, Arial, Helvetica, sans-serif;
+  opacity: 1;
+  -webkit-transition-delay: 0s;
 }
 
 .modal__container {
