--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -30,6 +30,7 @@
   background-color: white;
   padding: 32px 50px;
   position: relative;
+  box-sizing: border-box;
 }
 .modal__close-btn {
   background-image: url(../images/Group\ 27.svg);
@@ -40,11 +41,19 @@
   right: 50px;
   width: 40px;
   height: 40px;
-  opacity: 70%;
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+.modal__close-btn:hover {
+  opacity: 1;
 }
 
 .modal__title {
   margin: 0 0 32px;
+  font-size: 16px;
+  line-height: 100%;
+  font-weight: 500;
 }
 
 .modal__form {
@@ -64,6 +73,8 @@
   padding: 16px 12px;
   font-size: 20px;
   max-width: 630px;
+  border: 1px solid rgba(33, 33, 33, 0.4);
+  line-height: 1;
   border-radius: 8px;
   color: #212121;
 }
@@ -75,9 +86,14 @@
 .modal__submit-btn {
   max-width: 156px;
   padding: 18px 32px;
-  background-color: black;
+  background-color: #212121;
   color: white;
   border-radius: 8px;
+  cursor: pointer;
+  border: none;
+}
+.modal__submit-btn:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 627px) {
