--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -18,7 +18,6 @@
 
 .modal_is-opened {
   visibility: visible;
-  font-family: Poppins, Arial, Helvetica, sans-serif;
   opacity: 1;
   -webkit-transition-delay: 0s;
 }
@@ -51,7 +50,7 @@
 
 .modal__title {
   margin: 0 0 32px;
-  font-size: 16px;
+  font-size: 32px;
   line-height: 100%;
   font-weight: 500;
 }
@@ -92,18 +91,30 @@
   cursor: pointer;
   border: none;
 }
+
 .modal__submit-btn:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width: 627px) {
+  .modal__container {
+    padding: 22px 12px 12px;
+  }
+
+  .modal__close-btn {
+    top: 22px;
+    right: 12px;
+  }
+
   .modal__title {
-    margin: 0 0 24px;
+    margin: 0 0 34px;
+    font-size: 20px;
   }
 
   .modal__label {
     margin: 0 0 24px;
   }
+
   .modal__input {
     font-size: 16px;
   }
