--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,3 +1,7 @@
+.card {
+  position: relative;
+}
+
 .card__image {
   height: 413px;
   width: 100%;
@@ -5,6 +9,27 @@
   display: block;
   border-radius: 8px;
 }
+
+.card__delete-btn {
+  /* todo style */
+  background-image: url(../images/delete-button.svg);
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  background-repeat: no-repeat;
+  object-fit: cover;
+}
+.card__delete-btn:hover {
+  background-image: url(../images/delete-button.hover.svg);
+}
+
+.card__delete-btn_active:hover {
+}
+/* to do hover state delete butn */
 
 .card__content {
   display: flex;
@@ -38,9 +63,17 @@
   cursor: pointer;
 }
 
+.card__like-btn_active {
+  background-image: url(../images/like-button.svg);
+  opacity: 1;
+}
+
 .card__like-btn:hover {
   color: #212121;
   opacity: 100%;
+}
+.card__like-btn_active:hover {
+  opacity: 0.4;
 }
 
 @media screen and (max-width: 627px) {
