--- a/blocks/card.css
+++ b/blocks/card.css
@@ -8,10 +8,10 @@
   object-fit: cover;
   display: block;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .card__delete-btn {
-  /* todo style */
   background-image: url(../images/delete-button.svg);
   width: 32px;
   height: 32px;
@@ -22,6 +22,7 @@
   border: none;
   background-repeat: no-repeat;
   object-fit: cover;
+  cursor: pointer;
 }
 .card__delete-btn:hover {
   background-image: url(../images/delete-button.hover.svg);
@@ -64,7 +65,7 @@
 }
 
 .card__like-btn_active {
-  background-image: url(../images/like-button.svg);
+  background-image: url(../images/red.heart.btn.svg);
   opacity: 1;
 }
 
