--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -128,6 +128,7 @@
   display: inline-block;
   padding: 8px;
   color: white;
+  font-size: 20px;
 }
 
 @media screen and (max-width: 627px) {
@@ -137,6 +138,10 @@
 
   .modal__image {
     max-width: unset;
+  }
+
+  .modal__caption {
+    font-size: 16px;
   }
 
   .modal__close-btn {
