--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -125,7 +125,7 @@
   opacity: 0.5;
 }
 .modal__input_type_error {
-  border: 1px, solid, rgba(255, 0, 0, 0.6);
+  border: 1px solid rgba(255, 0, 0, 0.6);
 }
 
 .modal__image-container {
